remove mac-specific stuff
* on linux runtime targets produce two files, .a and .pic.a

--- a/config/config.initial.json
+++ b/config/config.initial.json
@@ -43,8 +43,8 @@
     "afl_instrument": false,
     "architecture": "amd64",
     "model": "default",
-    "system": "macosx",
-    "asm": "gcc -c -Wno-trigraphs",
+    "system": "",
+    "asm": "",
     "asm_cfi_supported": true,
     "with_frame_pointers": false,
     "profinfo": false,
