--- a/otherlibs/str/BUILD.bazel
+++ b/otherlibs/str/BUILD.bazel
@@ -28,7 +28,7 @@ compiler_module(
     struct = "str.ml",
     sig    = "Str_cmi",
     opts = MODULE_OPTS,
-    deps   = [
+    stdlib_deps   = [
         "//stdlib:Stdlib.Array",
         "//stdlib:Stdlib.Buffer",
         "//stdlib:Stdlib.Bytes",
@@ -48,7 +48,7 @@ compiler_signature(
     name = "Str_cmi",
     src  = "str.mli",
     opts = SIG_OPTS,
-    deps   = ["//stdlib:Stdlib"]
+    stdlib_deps = ["//stdlib:Stdlib_cmi"]
 )
 
 ################################################################
@@ -74,6 +74,19 @@ cc_library(
         "//runtime/caml:s.h",
         "//runtime/caml:signals.h",
     ],
-    copts = ["-I", "runtime", "-I", "runtime/caml"],
-    hdrs = ["//runtime/caml:domain_state.h"]
+    copts = ["-I", "runtime",
+             "-I", "runtime/caml",
+             "-I$(GENDIR)",
+             "-I$(GENDIR)/runtime",
+             "-I$(GENDIR)/runtime/caml",
+             ],
+    hdrs = ["//runtime/caml:domain_state.h"],
+    deps= [
+        # "//runtime/caml:hdrs",
+        "//runtime/caml:domain_state_h",
+        # "//runtime/caml:fail_h",
+        # "//runtime/caml:instruct_h",
+        # "//runtime/caml:jumptbl_h",
+        # ":primitives_h"
+    ],
 )
