--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -83,9 +83,10 @@ compiler_module(
         "//stdlib:Stdlib.Scanf",
     ],
     visibility = [
+        "//bin:__pkg__",
         "//bytecomp:__pkg__",
-        "//tools:__pkg__",
         "//toplevel:__subpackages__",
+        "//tools:__pkg__",
     ]
 )
 
@@ -299,10 +300,11 @@ compiler_module(
         "//stdlib:Stdlib.Sys",
     ],
     visibility = [
+        "//bin:__pkg__",
         "//bytecomp:__pkg__",
-        "//tools:__pkg__",
         "//toplevel:__pkg__",
         "//testsuite:__subpackages__",
+        "//tools:__pkg__",
         "//toplevel/native:__pkg__"
     ]
 )
@@ -478,7 +480,7 @@ compiler_module(
     visibility = [
         "@baseline//:__subpackages__",
         "//:__pkg__",
-        "//bin:__subpackages__",
+        "//bin:__pkg__",
         "//boot:__subpackages__",
         "//dev:__subpackages__",
         "//test:__pkg__",
