--- a/parsing/BUILD.bazel
+++ b/parsing/BUILD.bazel
@@ -518,6 +518,7 @@ compiler_module(
     ],
     visibility = [
         "//asmcomp:__pkg__",
+        "//bin:__pkg__",
         "//bytecomp:__pkg__",
         "//debugger:__pkg__",
         "//driver:__pkg__",
